kube/test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gyr-potty-grafana
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: gyr-potty-grafana.apps.okd.codespring.ro
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
